# atlas-agent

./: .env.example  .gitignore  README.md  alembic.ini  conftest.py  pyproject.toml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/atlas_api/: __init__.py  deps.py  main.py
apps/api/atlas_api/routers/: knowledge.py  models.py  notes.py  plugins.py  projects.py  sessions.py
apps/api/atlas_api/routers/_internal/: discord.py
apps/api/atlas_api/services/: agent_runner.py
apps/api/atlas_api/tests/: test_agent_runner.py  test_credential_store_postgres.py  test_health.py  test_internal_discord.py  test_knowledge_entities_endpoint.py  test_knowledge_graph_endpoint.py  test_knowledge_router.py  test_lifespan_graph.py  test_models_router.py  test_notes_router.py  test_plugins_router.py  test_projects_router.py  test_sessions_router.py  test_ws_chat.py  test_ws_chat_rag.py  test_ws_chat_tool_use.py  test_ws_chat_tool_use_real.py
apps/api/atlas_api/ws/: chat.py
apps/discord-bot/: Dockerfile  pyproject.toml
apps/discord-bot/atlas_discord_bot/: __main__.py  api_client.py  chunker.py  internal_app.py  poller.py  settings.py
apps/discord-bot/atlas_discord_bot/commands/: ask.py  ingest.py  status.py
apps/discord-bot/tests/: test_chunker.py  test_commands.py  test_poller.py
apps/web/: .dockerignore  .gitignore  Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
docs/: atlas_design_addendum.md  atlas_design_document.md  atlas_vision.html
docs/superpowers/plans/: 2026-04-26-atlas-phase-1-plan-1-foundation-scaffolding.md  2026-04-27-atlas-phase-1-plan-2-postgres-projects-crud.md  2026-04-27-atlas-phase-1-plan-3-providers-prompts-ws-chat.md  2026-04-27-atlas-phase-1-plan-4-knowledge-layer.md  2026-04-27-atlas-phase-1-plan-5-rag-in-chat.md  2026-04-27-atlas-phase-1-plan-6-react-frontend.md  2026-04-27-atlas-phase-2-plan-1-web-ingestion-design.md  (+11 more)
infra/: docker-compose.yml
infra/alembic/: env.py
(+89 files in other folders)
