[project]
name = "atlas-agent"
version = "0.1.0"
description = "ATLAS — Adaptive Task & Learning Assistant System"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["apps/api", "packages/atlas-core", "packages/atlas-knowledge"]

[tool.uv.sources]
atlas-core = { workspace = true }
atlas-knowledge = { workspace = true }
atlas-api = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "httpx-ws>=0.9.0",
    "aiohttp>=3.10",
]

[tool.pytest.ini_options]
testpaths = [
    "apps/api/atlas_api/tests",
    "packages/atlas-core/atlas_core/tests",
    "packages/atlas-knowledge/atlas_knowledge/tests",
]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: opt-in integration test (requires external services / browsers)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI's Depends(...) in defaults is the standard idiom
]
