[project]
name = "atlas-api"
version = "0.1.0"
description = "ATLAS FastAPI gateway"
requires-python = ">=3.13"
dependencies = [
    "atlas-core",
    "atlas-knowledge",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas_api"]
