[project]
name = "atlas-discord-bot"
version = "0.1.0"
description = "ATLAS Discord bot"
requires-python = ">=3.13"
dependencies = [
    "atlas-core",
    "discord.py>=2.4",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "structlog>=24.4",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas_discord_bot"]
